removed scrollbar from accordion and added correct text color in screenshots

--- a/src/main/resources/static/assets/css/bootstrap-custom.css
+++ b/src/main/resources/static/assets/css/bootstrap-custom.css
@@ -17,7 +17,7 @@
  
 .panel-body{
 	padding: 0px;
-	overflow-x:scroll;
+	overflow: auto;
 }
 
 .panel-heading{
